removed the win phone project files

--- a/HelloXamarinFormsWorld.Android/HelloXamarinFormsWorld.Android.csproj
+++ b/HelloXamarinFormsWorld.Android/HelloXamarinFormsWorld.Android.csproj
@@ -18,7 +18,8 @@
     <AndroidSupportedAbis>armeabi,armeabi-v7a,x86</AndroidSupportedAbis>
     <AndroidStoreUncompressedFileExtensions />
     <MandroidI18n />
-    <JavaMaximumHeapSize></JavaMaximumHeapSize>
+    <JavaMaximumHeapSize>
+    </JavaMaximumHeapSize>
     <JavaOptions />
     <NuGetPackageImportStamp>7ffd383b</NuGetPackageImportStamp>
   </PropertyGroup>
@@ -115,12 +116,6 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\Drawable\Icon.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\HelloXamarinFormsWorld\HelloXamarinFormsWorld.csproj">
-      <Name>HelloXamarinFormsWorld</Name>
-      <Project>{8F4B43AC-9BB1-4723-8B7C-A8FE4BBDF32F}</Project>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
