Update azure-pipelines.yml for Azure Pipelines

--- a/src/azure-pipelines.yml
+++ b/src/azure-pipelines.yml
@@ -38,12 +38,10 @@ jobs:
 
     steps:
     - task: NuGetToolInstaller@0
-      inputs: 
-        versionSpec: 4.4.1
 
     - task: NuGetCommand@2
       inputs:
-        restoreSolution: '$(Parameters.restorePkgSolution)'
+        restoreSolution: 'src/HelloXamarinWorld/HelloXamarinWorld.sln'
 
     - task: XamarinAndroid@1
       inputs:
