Update azure-pipelines.yml for Azure Pipelines

--- a/src/azure-pipelines.yml
+++ b/src/azure-pipelines.yml
@@ -4,6 +4,38 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/xamarin
 
 jobs:
+
+- job: Android
+  pool:
+    vmImage: 'VS2017-Win2016'
+
+  variables:
+    buildConfiguration: 'Release'
+    outputDirectory: '$(build.binariesDirectory)/$(buildConfiguration)'
+
+  steps:
+  - task: NuGetToolInstaller@0
+
+  - task: NuGetCommand@2
+    inputs:
+      restoreSolution: 'src/*.sln'
+
+  - task: XamarinAndroid@1
+    inputs:
+      projectFile: 'src/*droid*.csproj'
+      outputDirectory: '$(outputDirectory)'
+      configuration: '$(buildConfiguration)'
+
+  - task: AndroidSigning@3
+    inputs:
+      apksign: false
+      zipalign: false
+      apkFiles: '$(outputDirectory)/*.apk'
+
+  - task: PublishBuildArtifacts@1
+    inputs:
+      pathtoPublish: '$(outputDirectory)'
+
 - job: iOS
   pool:
     vmImage: 'macOS 10.13'
@@ -19,42 +51,11 @@ jobs:
 
   - task: NuGetCommand@2
     inputs:
-        restoreSolution: src/HelloXamarinWorld.sln
+      restoreSolution: 'src/*.sln'
 
   - task: XamariniOS@2
     inputs:
-      solutionFile: src/HelloXamarinWorld.sln
+      solutionFile: 'src/*.sln'
       configuration: 'Release'
       buildForSimulator: true
       packageApp: false
-      
-- job: Android
-  pool:
-    vmImage: 'VS2017-Win2016'
-
-  variables:
-    buildConfiguration: 'Release'
-    outputDirectory: '$(build.binariesDirectory)/$(buildConfiguration)'
-
-  steps:
-   - task: NuGetToolInstaller@0
-   - task: NuGetCommand@2
-     inputs:
-       restoreSolution: 'src/HelloXamarinWorld/HelloXamarinWorld.sln'
-
-   - task: XamarinAndroid@1
-     inputs:
-       projectFile: src/HelloXamarinWorld.sln
-       outputDirectory: '$(outputDirectory)'
-       configuration: '$(buildConfiguration)'
-
-   - task: AndroidSigning@3
-     inputs:
-       apkFiles: '$(outputDirectory)/*.apk'
-       apksign: false
-       zipalign: false
-
-   - task: PublishBuildArtifacts@1
-     inputs:
-       PathtoPublish: '$(build.binariesdirectory)/$(BuildConfiguration)'
-     condition: succeededOrFailed()    
