--- a/src/HelloXamarinWorld/HelloXamarinWorld.UWP/HelloXamarinWorld.UWP.csproj
+++ b/src/HelloXamarinWorld/HelloXamarinWorld.UWP/HelloXamarinWorld.UWP.csproj
@@ -7,6 +7,7 @@
     <ProjectGuid>{FD72CB6E-6BF9-4957-93BA-DF3A166228A5}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RuntimeIdentifiers>win10</RuntimeIdentifiers>
     <RootNamespace>HelloXamarinWorld.UWP</RootNamespace>
     <AssemblyName>HelloXamarinWorld.UWP</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
