--- a/src/azure-pipelines.yml
+++ b/src/azure-pipelines.yml
@@ -28,7 +28,7 @@ jobs:
       buildForSimulator: true
       packageApp: false
 
-- job: Android_new
+- job: Android
   pool:
     vmImage: 'VS2017-Win2016'
 
